2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* treeql.man: Bumped version 1.3.1
	* treql.tcl:
	* pkgIndex.tcl:

2006-09-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.testsuite: Fixed generation of the tree used in the
	  testsuite. The insert used the intended node names as
	  positions. Adapted some tests influenced by the new structure of
	  the tree.

2006-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.man: Fixed small typo.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.testsuite: Fixed use of duplicate test names.

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* treeql.test: Hooked into the new common test support code.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Moved the selection of the implementation out of
	  the package declaration into the runtime.

	* treeql.tcl: Renamed to treeql85.tcl. Also a new file containing
	  the selection of the implementation, basic dependency, and
	  commong provide command.

	* treeql85.tcl: New file. Was originally named
	  'treeql.tcl'. Contains the Tcl 8.5 specific implementation of
	  the package.

	* treeql.test: Expanded to use all implementations of struct::tree
	  which are available.

	* treeql.testsuite: New file, now contains tests which depend on
	  the implementation of struct::tree. For this package these are
	  all.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*