@@ -1,3 +1,11 @@
+2007-05-01  Andreas Kupries  <andreask@activestate.com>
+
+	* treeql85.tcl: Replaced deprecated {expand} syntax with {*}.
+	* docs/treeql-low.xml: [Bug 1710644].
+	* docs/treeql-int.xml:
+
+	* treeql.test: Updated accelerator handling.
+
 2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* treeql.man: Fixed all warnings due to use of now deprecated
